feat(orders): implement order and inventory workflows